# FDS

./: .gitignore  CMakeLists.txt  README.md
driver/: 2D_SS_HEAT_Equations.py  2D_TRANS_HEAT_Equations.py  2D_WAVE.py  ARB_PARABOLIC.py  ARB_STENCIL_TEST.py
driver/utility/: __init__.py  animated_heat_plot.py  heat_plot.py  save_mesh.py  wave_plot.py
src/: BTCS.cpp  FDS.hpp  FDS_eqs.cpp  pybindings.cpp
src/utility/: CSRMatrix.cpp  CSRMatrix.hpp  Matrix.cpp  Matrix.hpp  utility.cpp  utility.hpp
